      adding an outline cache (Zeno Gantner)
    - fixed ticket #541: "wrong outline can get displayed for a document"
      (Zeno Gantner)
    - fixed ticket #940: "crashes when right clicking in code editing area"
      (Zeno Gantner)
    - fixed ticket #878: "Tabs like 'Outline', 'Functions'... should have
      a close button, just like the documents tabs" (Zeno Gantner)

0.60 2010.04.20
    - Add FTP connection caching/sharing (SEWI)
    - Add interactive template functions (SEWI)
    - Fixed ticket #900: opening binary files may crash Padre (Zeno Gantner)
    - Improved some menu entries: added missing "...", better labels, better
      comments (Zeno Gantner)
    - Clearer error message if debugger is not started yet (Zeno Gantner)
    - Complete language/locale switch on Unix platforms: also correctly
      translate the Wx default labels (Zeno Gantner)
    - Fixed ticket #921: regex syntax error in Regex Editor
      (reported by leprevost)
    - Updated German and Turkish translation (Zeno Gantner, SEWI and Burak
      Gürsoy)
    - Added licensing information to About dialog (Zeno Gantner)
    - Skip '.' when indexing installed modules in @INC (dam)
    - Fixed bug related to search history (Sam Crawley)
    - Added file type filter "script file" (which includes Unix shell scripts
      and Windows .bat files) to the Open dialog (Zeno Gantner)
    - MIME types: added .mo to the list of binary file extensions, 
      improved/gettext-ified some descriptions, changed LaTeX extension from
      latex to tex (Zeno Gantner)
    - Autocomplete no longer displays the dialog when only one option is
      available (unless 'Autcomplete while typing' is on) (Sam Crawley - #927)

0.59 2010.03.31 
    - Don't crash open file list dialog on unsaved files or without
      files (SEWI)
    - Added a small survey for new Padre installation (SEWI)
    - Resolved the clash between threads and SQLite by temporarily