@@ -52,12 +52,7 @@ sub new {
 		comment     => Wx::gettext('Show a window listing all the functions in the current document'),
 		menu_method => 'AppendCheckItem',
 		menu_event  => sub {
-			if ( $_[1]->IsChecked ) {
-				$_[0]->refresh_functions( $_[0]->current );
-				$_[0]->show_functions(1);
-			} else {
-				$_[0]->show_functions(0);
-			}
+			$_[0]->show_functions( $_[1]->IsChecked );
 		},
 	);
 
