@@ -44,7 +44,7 @@ sub new {
 			CaptionVisible => $unlock,
 			Floatable      => $unlock,
 			Dockable       => $unlock,
-			Movable        => $unlock,			
+			Movable        => $unlock,
 			)->Right->Hide,
 	);
 	$aui->caption(
@@ -83,8 +83,8 @@ sub show {
 	$page->Show;
 	$self->Show;
 	$self->aui->GetPane($self)->Show;
-	
-	Wx::Event::EVT_AUINOTEBOOK_PAGE_CLOSE( $self, $self, $on_close );
+
+	Wx::Event::EVT_AUINOTEBOOK_PAGE_CLOSE( $self, $self, \&_on_close );
 
 	return;
 }
@@ -117,6 +117,42 @@ sub relocale {
 	foreach my $i ( 0 .. $self->GetPageCount - 1 ) {
 		$self->SetPageText( $i, $self->GetPage($i)->gettext_label );
 	}
+
+	return;
+}
+
+sub _on_close {
+	my ( $self, $event ) = @_;
+
+	my $pos  = $event->GetSelection;
+	my $type = ref $self->GetPage($pos);
+	$self->RemovePage($pos);
+
+	# De-activate in the menu
+	my %menu_name = (
+		'Padre::Wx::Outline'      => 'outline',
+		'Padre::Wx::TodoList'     => 'todo',
+		'Padre::Wx::FunctionList' => 'functions',
+	);
+	my %config_name = (
+		'Padre::Wx::Outline'      => 'main_outline',
+		'Padre::Wx::TodoList'     => 'main_todo',
+		'Padre::Wx::FunctionList' => 'main_functions',
+	);
+	if ( exists $menu_name{$type} ) {
+		$self->main->menu->view->{ $menu_name{$type} }->Check(0);
+		$self->main->config->set( $config_name{$type}, 0 );
+	} else {
+		warn "Unknown page type: '$type'\n";
+	}
+
+	# Is this the last page?
+	if ( $self->GetPageCount == 0 ) {
+		$self->Hide;
+		$self->aui->GetPane($self)->Hide;
+	}
+
+	return;
 }
 
 1;
